refactor: avoid using StringUtils
Basically we don't want to depend on Apache's package, since it might go
away soon as its a transitive dependency at the moement.

RHCLOUD-22513